--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,7 +1,28 @@
-.copy{
+.text-green{
     text-decoration: none;
     color: rgb(0,159,127);
 }
-.copy:hover{
-    color: rgb( 1,147,118);
+.text-green:hover{
+    color: rgb( 1,147,118) !important;
 }
+
+
+/* blank html */
+nav{
+   box-shadow: 0 1px 2px 0 rgb(0 0 0/0.2);
+}
+nav .dropdown svg path{
+    fill:  rgb(0,159,127); 
+}
+nav .dropdown-toggle::after{
+    color:  rgb(0,159,127);
+    font-size: 20px;
+    
+}
+.hover-green:hover{
+    background-color:rgb( 1,147,118) ;
+}
+nav .dropdown{
+    border: 2px solid rgb(229,231,235);
+}
+
