--- a/assets/css/Mybootstrap.css
+++ b/assets/css/Mybootstrap.css
@@ -86,7 +86,9 @@
     scroll-behavior: smooth;
   }
 }
-
+.bg-gray-100{
+  background-color:var(--bs-gray-100) ;
+}
 body {
   margin: 0;
   font-family: var(--bs-body-font-family);
