Navbab modal is ready, will add additional liinks

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -315,7 +315,7 @@
     background-color: white;
 }
 .bg-dark-white{
-    background-color: #edf3f8 ;
+    background-color: rgb(107,114,128) ;
 }
 .bg-blue{
   background-color:    #558985;
