--- a/assets/css/Mybootstrap.css
+++ b/assets/css/Mybootstrap.css
@@ -30,7 +30,7 @@
   --bs-gray-700: #495057;
   --bs-gray-800: #343a40;
   --bs-gray-900: #212529;
-  --bs-primary: #0d6efd;
+  --bs-primary: rgb(66 133 244) ;
   --bs-secondary: #6c757d;
   --bs-success: #198754;
   --bs-info: #0dcaf0;
@@ -87,7 +87,10 @@
   }
 }
 .bg-gray-100{
-  background-color:var(--bs-gray-100) ;
+  background-color:rgb( var(--bs-gray-100)) ;
+}
+.bg-gray-700{
+  background-color:rgb( var(--bs-gray-700)) ;
 }
 body {
   margin: 0;
@@ -2000,7 +2003,7 @@ progress {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #212529;
+  color: #828282;
   background-color: #fff;
   background-clip: padding-box;
   border: 1px solid #ced4da;
@@ -2026,7 +2029,6 @@ progress {
   background-color: #fff;
   border-color: #86b7fe;
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
 }
 .form-control::-webkit-date-and-time-value {
   height: 1.5em;
@@ -2837,7 +2839,7 @@ textarea.form-control-lg {
   border: var(--bs-btn-border-width) solid var(--bs-btn-border-color);
   border-radius: var(--bs-btn-border-radius);
   background-color: var(--bs-btn-bg);
-  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 @media (prefers-reduced-motion: reduce) {
   .btn {
