--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -87,6 +87,25 @@ border-bottom: 2px solid  #0d6efd !important;
 }
 
 
+.or::before ,.or::after{
+  content: '';
+  width: 208px;
+  height: 1px;
+  border: none;
+  outline:none;
+  background-color:silver;
+  display: block;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+
+
+}
+.or::after{
+  right: 0;
+}
+
+
 .register-link:hover{
   text-decoration: none !important;
 }
