shops iltems responsive

--- a/assets/css/Mybootstrap.css
+++ b/assets/css/Mybootstrap.css
@@ -87,10 +87,14 @@
   }
 }
 .bg-gray-100{
-  background-color:rgb( var(--bs-gray-100)) ;
+  background-color: var(--bs-gray-100) ;
 }
+.bg-gray-200{
+  background-color: var(--bs-gray-200) !important;
+}
+
 .bg-gray-700{
-  background-color:rgb( var(--bs-gray-700)) ;
+  background-color: var(--bs-gray-700) ;
 }
 body {
   margin: 0;
@@ -1236,7 +1240,7 @@ progress {
     --bs-gutter-y: 3rem;
   }
 }
-@media (min-width: 992px) {
+@media (min-width: 1100px) {
   .col-lg {
     flex: 1 0 0%;
   }
