--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -59,6 +59,7 @@ border-bottom: 2px solid  #0d6efd !important;
   border-bottom: 2px solid   rgb(75, 85, 99) !important;
   
   }
+  
 
 /* modal  */
 .login input:focus{
@@ -118,3 +119,9 @@ border-bottom: 2px solid  #0d6efd !important;
 
 
 
+/* contact html */
+
+.shadow{
+  box-shadow: 0 2px 16px rgba(0, 0, 0, 0.05);
+
+}
