cards done. problem in section height. nav sticky

--- a/assets/css/Mybootstrap.css
+++ b/assets/css/Mybootstrap.css
@@ -2905,11 +2905,11 @@ textarea.form-control-lg {
 }
 
 .btn-secondary {
-  --bs-btn-color: #fff;
-  --bs-btn-bg: #6c757d;
+  --bs-btn-color: #4b5563;
+  --bs-btn-bg: #F3F4F6;
   --bs-btn-border-color: #6c757d;
   --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: #5c636a;
+  --bs-btn-hover-bg: rgb(0,159,127);
   --bs-btn-hover-border-color: #565e64;
   --bs-btn-focus-shadow-rgb: 130, 138, 145;
   --bs-btn-active-color: #fff;
