--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -168,11 +168,39 @@ transform: scale(0.6);
 .accordion-button:not(.collapsed)::after{
   transform: rotate(-180deg) scale(0.6);
 }
-main{
-  top: 100vh;
-  right: 0;
-  height: 400vh;
-}
+
+
+/* products section */
 #products-sec{
-  height: 400vh;
+  min-height: 120vh;
 }
+.last-price{
+  color: rgb(156,163,173);
+}
+.discount{
+  top: 15px;
+  right: 15px;
+  z-index: 2;
+}
+.btn-card1{
+  background-color: #f8f9fa !important;
+}
+.btn-card2{
+  background-color: rgb(229,231,235) !important;
+}
+.product{
+  box-shadow:  0 1px 2px 0 rgb(0 0 0/0.05);
+}
+.product:hover{
+  transform: translateY(-2px);
+  box-shadow:  0 1px 3px 0 rgb(0 0 0/0.1),0 1px 2px -1px rgb(0 0 0/0.1);
+}
+.product .btn-group:hover .btn-card1{
+  color: white  ;
+  background-color: rgb(0, 159, 127) !important;
+}
+.product .btn-group:hover .btn-card2{
+  color: white  ;
+  background-color:rgb(0, 143, 114) !important;
+}
+
