contact is responsive and nav added

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -50,6 +50,9 @@ nav .dropdown {
 .text-green:hover {
   color: rgb(1, 147, 118) !important;
 }
+.text-green:hover a {
+  color: rgb(1, 147, 118) !important;
+}
 
 button.btn:active {
 border-top: 2px solid  rgb(0, 159, 127) !important;
@@ -233,9 +236,13 @@ transform: scale(0.6);
 width: 60%;
   
 }
-
-
-
+.user{
+  border-radius: 50%;
+}
+.user .dropdown-menu{
+  top: 60px;
+  left: -400%;
+}
 /* responsive  */
 @media (max-width:992px) {
   .header-text{
@@ -264,5 +271,15 @@ width: 60%;
   
 
 
+  
+}
+
+@media (max-width:572px) {
+  .contact-form{
+    margin-top: 30px;
+  }
+ .brand{
+    margin: auto;
+  }
   
 }
