--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -333,7 +333,7 @@
 }
 
 .bg-green{
-  background-color:    #1abc9c;
+  background-color:    rgb(0,159,127);
 }
 .bg-gray{
     background-color: gray;
